# GitGuessr

./: .env.example  Cargo.toml  build.rs  docker-compose.yaml
backend/: main.rs  schema.rs
backend/mail/: example.rs
backend/models/: mod.rs
backend/models/answered_questions/: generated.rs
backend/models/live_questions/: generated.rs
backend/models/lobbies/: generated.rs
backend/services/: todo.rs
frontend/: package.json
frontend/src/: App.css  App.tsx
frontend/src/containers/: AccountPage.tsx  DailyChallengePage.tsx  GameMode1Page.tsx  GameMode2Page.tsx  GameSelectPage.tsx  Home.tsx  PartyPage.tsx  QuizPage.tsx  RepoSelectPage.tsx
frontend/src/types/: rust.d.ts
gitguessr_auth/: Cargo.toml
gitguessr_auth/src/: controller.rs  lib.rs  user.rs  user_session.rs
gitguessr_auth/src/endpoints/: service_actixweb.rs
gitguessr_auth/src/extractors/: auth_actixweb.rs  mod.rs
gitguessr_auth/src/mail/: auth_activated.rs  auth_password_changed.rs  auth_password_reset.rs  auth_recover_existent_account.rs  auth_recover_nonexistent_account.rs  auth_register.rs
gitguessr_auth/src/permissions/: mod.rs  role_permission.rs  user_permission.rs  user_role.rs
gitguessr_dev/: Cargo.toml
gitguessr_dev/src/: controller.rs  lib.rs
gitguessr_dev/src/endpoints/: mod.rs  service_actixweb.rs
migrations/2023-02-15-043316_gitguessr/: down.sql  up.sql
