[package]
edition = "2021"
name = "gitguessr_auth"
version = "0.0.0"
publish = false

[dependencies]
actix-web = "4.2.1"
actix-http = "3.0.4"
derive_more = "0.99.17"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
lettre = "0.10.1"
anyhow = "1.0.57"
rust-argon2 = "1.0"
futures = "0.3.25"
rand = "0.8.5"
create-rust-app = { version = "8", default-features = false, features = ["database_postgres"] }
diesel = { version = "2.0.0-rc.1", default-features = false, features = ["uuid", "r2d2", "chrono"] }
serde = { version = "1.0.152", features = ["derive"] }
tsync = "1.6.0"
serde_json = "1.0.91"
chrono = { version = "0.4.23", default-features = false, features = ["clock", "serde"] }

